@@ -5,11 +5,8 @@ import net.minecraft.client.renderer.RenderType;
 
 public class FullBrightTextType extends RenderType {
 
-    private final RenderType wrapped;
-
     public FullBrightTextType(String name, RenderType wrapped) {
         super(name, wrapped.getVertexFormat(), wrapped.getDrawMode(), wrapped.getBufferSize(), false, true, wrapped::setupRenderState, wrapped::clearRenderState);
-        this.wrapped = wrapped;
     }
 
     @Override
